# md-fetch

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/speckit-archive-run/: SKILL.md
.claude/skills/speckit-reconcile-run/: SKILL.md
.gemini/commands/: speckit.archive.run.toml  speckit.reconcile.run.toml
.github/workflows/: ci.yml  integration.yml  publish.yml
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  gemini.manifest.json  speckit.manifest.json
.specify/memory/: changelog.md  constitution.md  plan.md  spec.md
.specify/templates/: checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
specs/001-mdfetch-medium-extractor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mdfetch-medium-extractor/checklists/: requirements.md
specs/001-mdfetch-medium-extractor/contracts/: api.md
specs/002-devto-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-devto-provider/checklists/: requirements.md
specs/002-devto-provider/contracts/: public-api.md
specs/003-medium-freedium-fallback/: plan.md  research.md  spec.md  tasks.md
specs/003-medium-freedium-fallback/checklists/: requirements.md
specs/003-medium-freedium-fallback/contracts/: extract-api.md
specs/004-remove-backoff/: plan.md  research.md  spec.md  tasks.md
specs/004-remove-backoff/checklists/: requirements.md
specs/005-substack-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-substack-provider/checklists/: requirements.md
specs/005-substack-provider/contracts/: extractor-api.md
specs/006-thenewstack-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-thenewstack-provider/checklists/: requirements.md
specs/006-thenewstack-provider/contracts/: public-api.md
specs/007-dzone-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-dzone-provider/checklists/: requirements.md
specs/007-dzone-provider/contracts/: public-api.md
specs/008-mdfetch-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-mdfetch-cli/checklists/: requirements.md
specs/009-homebrew-tap-formula/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-boomi-blog-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-konghq-blog-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-list-platforms/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/mdfetch/: __init__.py  base.py  cli.py  exceptions.py  router.py
tests/: conftest.py
tests/integration/: conftest.py  test_boomi_integration.py  test_cli_integration.py  test_devto_integration.py  test_dzone_integration.py  test_kong_integration.py  test_medium_integration.py  test_substack_integration.py  test_thenewstack_integration.py
tests/unit/: test_boomi_extractor.py  test_cli.py  test_devto_extractor.py  test_dzone_extractor.py  test_fetch_errors.py  test_kong_extractor.py  test_medium_extractor.py  test_router.py  test_silent.py  test_substack_extractor.py  test_thenewstack_extractor.py
(+40 files in other folders)
